# cuda-proj-tmpl

./: .gitignore  .run.sh.swp  CMakeLists.txt  README.md  cmake.sh  cmake_only.sh  cmpil.sh  cmpil_only.sh  makcmpil.sh  nsys_run.sh  report2.nsys-rep  report3.nsys-rep  run.sh  tzq_test_blocked_flash.py
cmake/: initBuildType.cmake  preventBuildInSource.cmake
cmake/cuda/: FindCUDALibs.cmake  tzq_test.cmake
src/: CMakeLists.txt  atten.cu  bak_saxpy.cu  baksaxpy.cu  saxpy.cu
src/common/: CMakeLists.txt
src/sum_kernels/: CMakeLists.txt  add2_ops.cpp  ref.txt
src/tzq/: CMakeLists.txt  tzq_cuda.cu  tzq_cuda.h
